# AlpacaCryptoTradingBot

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
data/: SOLUSDT-1d-2024-11.csv  SOLUSDT-4h-2024-11.csv  temp_catchwave.csv
docs/: ACTB - Backtesting Notes.md  ACTB - Trading Strategy.md
src/: backtest.py  bot.py
src/backtests/: __init__.py  backtest_catch_the_wave.py  backtest_shared.py  backtest_stuck_in_a_box.py
src/strategies/: catch_the_wave.py  stuck_in_a_box.py
src/utils/: data_fetch.py  risk_management.py
tests/: conftest.py  test_backtest.py
tests/test_strategies/: test_catch_the_wave.py  test_stuck_in_a_box.py
tests/test_utils/: test_risk_management.py
tests/tmp-data/: temp_cleaned_btcusdt_1h.csv  temp_cleaned_solusdt_1h.csv
