[tool.poetry]
name = "alpacacryptotradingbot"
version = "0.1.0"
description = "Generate consistent profits through disciplined swing trading in crypto markets."
authors = ["imKXNNY <kenny.gueclue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
alpaca-py = "^0.35.0"
streamlit = "^1.41.1"
apscheduler = "^3.11.0"
alpaca-trade-api = "^3.2.0"
ta = "^0.11.0"
backtrader = "^1.9.78.123"
prettier = "^0.0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
